--- a/app/views/spree/layouts/spree_application.html.erb
+++ b/app/views/spree/layouts/spree_application.html.erb
@@ -54,6 +54,7 @@ end
         <ul class="sub_menu" id="hideMe2">
           <li class="child"><a href="http://watteam.com/faq/">FAQ</a></li>
           <li class="child"><a href="http://watteam.com/video-gallery/">Video Gallery</a></li>
+          <li><a href="http://watteam.com/documents/">Documents</a> </li>
         </ul>
       </li>
       <li><a href="watteam.com/contact/">CONTACT US</a></li>
