--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -101,7 +101,7 @@ $(document).ready(function(){
 <div id="tab-1" class="tab-content current-tab">
 
 <p><img src="<%= asset_path ('mid_banner.jpg') %>" alt="watteam banner" width="100%" /></p>
-<p><strong>With POWERBEAT, you can have it all.</strong>  The self-contained kit puts an end to factory installation and calibration. It's packed with two patent-pending mechanical sensors and intelligent processing units – that when attached to the cranks<sup>1</sup> deliver real (not estimated) left and right leg power metrics.  POWERBEAT is light-weight, durable and consistently accurate enough to be used by professional cyclists – yet affordable enough for unsponsored cyclists. It's also the first to come with an 80-hour rechargeable battery, and works with ANT+ head units, as well as with Bluetooth Smart enabled smartphones. <br />
+<p><strong>With POWERBEAT, you can have it all.</strong>  The self-contained kit puts an end to factory installation and calibration. It's packed with two patent-pending mechanical sensors and intelligent processing units – that when attached to the cranks deliver real (not estimated) left and right leg power metrics.  POWERBEAT is light-weight, durable and consistently accurate enough to be used by professional cyclists – yet affordable enough for unsponsored cyclists. It's also the first to come with an 80-hour rechargeable battery, and works with ANT+ head units, as well as with Bluetooth Smart enabled smartphones. <br />
 At last, a professional-grade power meter that anyone can afford!<br />
 Notes:<br />
 1)  POWERBEAT supports hollow aluminum cranks only.  Future versions will support all additional cranks, including Carbon.<br />
@@ -113,7 +113,7 @@ Notes:<br />
 The sensors attach independently to each crank arm. You receive actual (not estimated) left and right leg power metrics, which help in identifying weaknesses, correcting them, and training to your full potential.</p>
 
 <p><strong>Light weight</strong><br />
-The mechanical sensor and its processing comp unit weigh less than 24 grams when attached to each of the crank arms – about the weight of a large bite of an apple!</p>
+The mechanical sensor and its processing comp unit weigh less than 20 grams when attached to each of the crank arms – about the weight of a large bite of an apple!</p>
 
 <p><strong>Self-install</strong><br />
 Installation requires only basic technical skills. All the necessary tools are included in the box, with the exception of the Allen key or wrench necessary for removing the pedals. The downloadable app has clear instructional videos that will guide you every step of the way. The entire installation takes about 30 minutes, though the sensors need to dry for 24 hours after they're glued.</p>
