--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -73,8 +73,9 @@ $(document).ready(function(){
                 <div class="container">
                   <div class="store_left">
                     <div class="go_to_store">
+                      <span><a href="http://watteam.com/products/powerbeat-pro-level-power-meter-spring-2016">visit store</a></span>
                     <%= image_tag("item-3.png", :alt => "slider1_img") %>
-                    <span><a href="http://watteam.com/products/powerbeat-pro-level-power-meter-spring-2016">visit store</a></span>
+                    
                   </div>
                   </div>
                   <div class="abt_right">
@@ -120,6 +121,7 @@ $(document).ready(function(){
                       <ul>
                         <li><a href="http://watteam.com/faq/">faq </a> </li>
                         <li><a href="http://watteam.com/video-gallery/">Video Gallery</a> </li>
+                        <li><a href="http://watteam.com/documents/">Documents</a> </li>
                         
                       </ul>
                     </div>
