--- a/app/views/spree/order_mailer/WatteamOrderConfirmation.html
+++ b/app/views/spree/order_mailer/WatteamOrderConfirmation.html
@@ -141,7 +141,7 @@
                          Spree.t('order_mailer.confirm_email.thanks') 
                         end
                          %>
-                         POWERBEAT will be shipped to your home by the <strong>March of 2016</strong>.<br />
+                         POWERBEAT will be shipped to your home by <strong>March of 2016</strong>.<br />
                          We're excited to have you on board and thank you for your business. 
                     </span>
                     <h3>Watteam</h3>
