--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -1,5 +1,5 @@
 <script>
-window.location.href = '/products/powerbeat-pro-level-power-meter-spring-2016';
+//window.location.href = '/products/powerbeat-pro-level-power-meter-spring-2016';
 </script>
 <section class="slider_home1">
 <div id="carousel-example" class="carousel slide" data-ride="carousel">
@@ -14,7 +14,7 @@ window.location.href = '/products/powerbeat-pro-level-power-meter-spring-2016';
   <div class="carousel-inner">
     <div class="item active">
   
-      <%= link_to image_tag("silde-1.png"), '#' %>
+      <%= link_to image_tag("silde-1.png" , :class => "img_preview"), '#' %>
       <div class="carousel-caption  caption-wrper">
         
         <p class="banner-title">We've leveled the playing field with an affordable, pro-level power meter</p>
@@ -24,7 +24,7 @@ window.location.href = '/products/powerbeat-pro-level-power-meter-spring-2016';
     </div>
 <div class="item">
   
-      <%= link_to image_tag("silde-1.png"), '#' %>
+      <%= link_to image_tag("silde-1.png" , :class => "img_preview") , '#' %>
       <div class="carousel-caption  caption-wrper">
         
         <p class="banner-title">We've leveled the playing field with an affordable, pro-level power meter</p>
@@ -34,7 +34,7 @@ window.location.href = '/products/powerbeat-pro-level-power-meter-spring-2016';
     </div>
 <div class="item">
   
-      <%= link_to image_tag("silde-1.png"), '#' %>
+      <%= link_to image_tag("silde-1.png" ,:class => "img_preview"), '#' %>
       <div class="carousel-caption  caption-wrper">
         
         <p class="banner-title">We've leveled the playing field with an affordable, pro-level power meter</p>
