--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -19,7 +19,7 @@
         
         <p class="banner-title">We've leveled the playing field with an affordable, pro-level power meter</p>
        
-       <a class="btn-shop" href="http://watteam-staging.herokuapp.com/products/powerbeat-pro-level-power-meter-spring-2016">Shop Now</a>
+       <a class="btn-shop" href="/products">Shop Now</a>
       </div>
     </div>
 <div class="item">
@@ -29,7 +29,7 @@
         
         <p class="banner-title">We've leveled the playing field with an affordable, pro-level power meter</p>
        
-       <a class="btn-shop" href="http://watteam-staging.herokuapp.com/products/powerbeat-pro-level-power-meter-spring-2016">Shop Now</a>
+       <a class="btn-shop" href="/products">Shop Now</a>
       </div>
     </div>
 <div class="item">
@@ -39,7 +39,7 @@
         
         <p class="banner-title">We've leveled the playing field with an affordable, pro-level power meter</p>
        
-       <a class="btn-shop" href="#">Shop Now</a>
+       <a class="btn-shop" href="/products">Shop Now</a>
       </div>
     </div>
 </div>
@@ -61,7 +61,7 @@
 </div>
 </div>
  </section>
-
+<!--
 <section class="slider_home2">
   <div class="container">
   <div class="row1">
@@ -73,7 +73,7 @@
             <div class="img"> <%= link_to image_tag("item-1.png", :alt => "user"), spree.account_path %>
               <div class="overlay"> <a href="#" class="expand">+</a> 
                 <!-- <a class="close-overlay hidden">x</a> --> 
-              </div>
+    <!--          </div>
             </div>
             <h2 class="text-center title-2">powerbeat</h2>
           </div>
@@ -83,7 +83,7 @@
             <div class="img"> <%= link_to image_tag("item-2.png", :alt => "user"), spree.account_path %>
               <div class="overlay"> <a href="#" class="expand">+</a> 
                 <!-- <a class="close-overlay hidden">x</a> --> 
-              </div>
+       <!--       </div>
             </div>
           </div>
           <h2 class="text-center title-2">accessories</h2>
@@ -93,7 +93,7 @@
             <div class="img"> <%= link_to image_tag("item-3.png", :alt => "user"), spree.account_path %>
               <div class="overlay"> <a href="#" class="expand">+</a> 
                 <!-- <a class="close-overlay hidden">x</a> --> 
-              </div>
+           <!--   </div>
             </div>
           </div>
           <h2 class="text-center title-2">in the news</h2>
@@ -108,7 +108,7 @@
     </div>
   </div>
 </div>
-</section>
+</section>-->
 
 
 
@@ -159,9 +159,7 @@
 
       
 
-<!-- SnapWidget -->
-<iframe src="http://snapwidget.com/sc/?u=d2F0dGVhbXBvd2VyYmVhdHxpbnwxNTB8M3wzfHxub3w1fG5vbmV8b25TdGFydHx5ZXN8bm8=&ve=290116" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:1024px; height:150px"></iframe>
-
+<!-- LightWidget WIDGET --><script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/83e0272d513357ae832d896f2ef1a39f.html" id="lightwidget_83e0272d51" name="lightwidget_83e0272d51" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
         <h2 class="text-center text-heading-2"><a href="http://watteam-staging.bestdevsite.com/news/gallery/"> view gallery > </a>     </h2>
         <div class="top-to-bottom"></div>
         
