updated title of instagram widget

--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -1,5 +1,5 @@
 <script>
-window.location.href = '/products/powerbeat-pro-level-power-meter-spring-2016';
+//window.location.href = '/products/powerbeat-pro-level-power-meter-spring-2016';
 </script>
 <section class="slider_home1">
 <div id="carousel-example" class="carousel slide" data-ride="carousel">
@@ -117,7 +117,7 @@ window.location.href = '/products/powerbeat-pro-level-power-meter-spring-2016';
     <div class="row ">
       <div class="col-xs-12 col-md-12 col-sm-12 ">
         <h2 class="text-center text-heading">#watteampowerbeat on INSTAGRAM</h2>
-        <p class="lead">Follows us to  find oout the latest news and from our powerebeat team</p>
+        <p class="lead">Follow us to find out the latest news from our Powerbeat Team</p>
         <!--< div class="logo-slider">
          <ul class="slider2 logo-slide" style="width: 1115%; position: relative; transition-duration: 0.5s; transform: translate3d(-2380px, 0px, 0px);">
                 <li class="bx-clone">               
