--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -66,19 +66,18 @@ $(document).ready(function(){
     <div class="container">
       <div class="menu_nev">
         <ul class="menu_ul">
-          <li><a href="http://watteam.com/products/powerbeat-pro-level-power-meter-spring-2016">store</a></li>
+          <li><a href="/">store</a></li>
           <li class="power_beat"><a href="#">About Powerbeat<i class="fa fa-angle-down"></i></a>
             <div class="bet_sub_menu">
             <div class="mega_abt" style="background:#dddddf"> 
                 <div class="container">
-                  <div class="store_left">
+                <div class="store_left">
                     <div class="go_to_store">
-                      <span><a href="http://watteam.com/products/powerbeat-pro-level-power-meter-spring-2016">visit store</a></span>
-                    <%= image_tag("item-3.png", :alt => "slider1_img") %>
-                    
-                  </div>
-                  </div>
-                  <div class="abt_right">
+                    	<span><a href="/">visit store</a></span>
+                    	<%= image_tag("item-3.png", :alt => "slider1_img") %>
+					</div>
+				</div>
+            	<div class="abt_right">
                     <div class="sub_abt">
                       <span><a href="http://watteam.com/benefits/"> benefits  </a></span>
                       <%= image_tag("menu1.jpg", :alt => "slider1_img") %>
