--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -91,6 +91,7 @@ $(document).ready(function(){
 <div class="shipping_info_2015 clearfix">
 <strong>Shipping will be available in April 2016 (Currently available in the US only)</strong>
 </div>
+ <% if (@product.id == 33 || @product.id == 22 || spree_current_user) %>
 <ul class="tabs">
     <li class="tab-link current" data-tab="tab-1">Overview</li>
     <li class="tab-link" data-tab="tab-2">Benefits</li>
@@ -179,7 +180,7 @@ Box size:   27*22.5*7 cm<br />
 Box weight: 850 grams (29.9 ounces)<br />
 </p>
 </div>
-</div>
+</div> <% end %>
 </div>
 <div class="dnone">
 <div id="crank_support_content">
