--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -66,15 +66,15 @@ $(document).ready(function(){
     <div class="container">
       <div class="menu_nev">
         <ul class="menu_ul">
-          <li><a href="http://watteam.com/products/powerbeat-pro-level-power-meter-spring-2016">store</a></li>
+          <li><a href="/products">store</a></li>
           <li class="power_beat"><a href="http://watteam.com/about">About Powerbeat<i class="fa fa-angle-down"></i></a>
             <div class="bet_sub_menu">
             <div class="mega_abt" style="background:#dddddf"> 
                 <div class="container">
                   <div class="store_left">
                     <div class="go_to_store">
-                      <span><a href="http://watteam.com/products/">visit store</a></span>
-                    <a href="http://watteam.com/products/powerbeat-pro-level-power-meter-spring-2016"><%= image_tag("item-3.png", :alt => "slider1_img") %></a>
+                      <span><a href="/products">visit store</a></span>
+                    <a href="/products"><%= image_tag("store-item.jpg", :alt => "slider1_img") %></a>
                     
                   </div>
                   </div>
@@ -86,7 +86,7 @@ $(document).ready(function(){
                     <div class="sub_abt">
                       <span><a href="http://watteam.com/technology/">  technology </a></span>
 
-                      <a href="http://watteam.com/technology/"><%= image_tag("menu2.jpg", :alt => "slider1_img") %></a>
+                      <a href="http://watteam.com/technology/"><%= image_tag("technology_menu.jpg", :alt => "slider1_img") %></a>
                     </div>
                     <div class="sub_abt">
                       <span><a href="http://watteam.com/news/gallery/">    gallery </a></span>
@@ -101,7 +101,7 @@ $(document).ready(function(){
           </li>
           <li class="company_sub"><a href="#">Company<i class="fa fa-angle-down"></i></a>
             <div class="company_sub_menu">
-                <div class="mega_company" style="background:#ccc"> 
+                <div class="mega_company" style="background:#dddddf"> 
                     <div class="container">
                       <ul>
                         <li><a href="http://watteam.com/about/">ABOUT US </a> </li>
@@ -116,7 +116,7 @@ $(document).ready(function(){
           </li>
           <li class="support_sub"><a href="#">Support<i class="fa fa-angle-down"></i></a>
               <div class="support_sub_menu">
-                <div class="mega_support" style="background:#ccc"> 
+                <div class="mega_support" style="background:#dddddf"> 
                     <div class="container">
                       <ul>
                         <li><a href="http://watteam.com/faq/">faq </a> </li>
