--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -98,7 +98,7 @@
     <div class="row ">
       <div class="col-xs-12 col-md-12 col-sm-12 ">
         <h2 class="text-center text-heading">#watteampowerbeat on INSTAGRAM</h2>
-        <p class="lead">Follows us to  find oout the latest news and from our powerebeat team</p>
+        <p class="lead">Follows us to  find out the latest news and from our powerebeat team</p>
         <!--< div class="logo-slider">
          <ul class="slider2 logo-slide" style="width: 1115%; position: relative; transition-duration: 0.5s; transform: translate3d(-2380px, 0px, 0px);">
                 <li class="bx-clone">               
