--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -35,49 +35,49 @@
 <div class="row">
 <div class="col-xs-12">
 <div class="clearfix"></div>
-      <div class="top-to-bottom"></div>
+      <div class="top-to-bottom" style="padding:20px 0;"></div>
       </div>
 
 
 </div>
 </div>
  </section>
-<!--
+
 <section class="slider_home2">
   <div class="container">
   <div class="row1">
     <div class="slider_container">
-      <h1 class="text-center title-Sellers">Best Sellers</h1>
+<!--      <h1 class="text-center title-Sellers">Best Sellers</h1> -->
       <div class="slider_contain">
         <div class="col-sm-4 col-md-4">
           <div id="effect-1" class="effects clearfix">
-            <div class="img"> <%= link_to image_tag("item-1.png", :alt => "user"), spree.account_path %>
+            <div class="img"> <%= link_to image_tag("item-1.png", :alt => "user"), '/products/powerbeat' %>
               <div class="overlay"> <a href="#" class="expand">+</a> 
-                <!-- <a class="close-overlay hidden">x</a> --> 
-    <!--          </div>
+              <a class="close-overlay hidden">x</a>  
+        </div>
             </div>
-            <h2 class="text-center title-2">powerbeat</h2>
+            <h2 class="text-center title-2"><a href="/products/powerbeat" style="color:#0099A8 !important">powerbeat</a></h2>
           </div>
         </div>
         <div class="col-sm-4 col-md-4 ">
           <div id="effect-1" class="effects clearfix">
-            <div class="img"> <%= link_to image_tag("item-2.png", :alt => "user"), spree.account_path %>
+            <div class="img"> <%= link_to image_tag("item-2.png", :alt => "user"), '/products' %>
               <div class="overlay"> <a href="#" class="expand">+</a> 
-                <!-- <a class="close-overlay hidden">x</a> --> 
-       <!--       </div>
+               <a class="close-overlay hidden">x</a>
+             </div>
             </div>
           </div>
-          <h2 class="text-center title-2">accessories</h2>
+          <h2 class="text-center title-2"><a href="/products" style="color:#0099A8 !important">accessories</a></h2>
         </div>
         <div class="col-sm-4 col-md-4">
           <div id="effect-1" class="effects clearfix">
-            <div class="img"> <%= link_to image_tag("item-3.png", :alt => "user"), spree.account_path %>
+            <div class="img"> <%= link_to image_tag("item-3.png", :alt => "user"), 'http://watteam.com/news/press/' %>
               <div class="overlay"> <a href="#" class="expand">+</a> 
-                <!-- <a class="close-overlay hidden">x</a> --> 
-           <!--   </div>
+                 <a class="close-overlay hidden">x</a> 
+           </div>
             </div>
           </div>
-          <h2 class="text-center title-2">in the news</h2>
+          <h2 class="text-center title-2"><a href="http://watteam.com/news/press/" style="color:#0099A8 !important">in the news</a></h2>
         </div>
          
         
@@ -89,7 +89,7 @@
     </div>
   </div>
 </div>
-</section>-->
+</section>
 
 
 
