--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -52,7 +52,7 @@
         <div class="col-sm-4 col-md-4">
           <div id="effect-1" class="effects clearfix">
             <div class="img"> <%= link_to image_tag("item-1.png", :alt => "user"), '/products/powerbeat' %>
-              <div class="overlay"> <a href="#" class="expand">+</a> 
+              <div class="overlay"> <a href="/products/powerbeat" class="expand">+</a> 
               <a class="close-overlay hidden">x</a>  
         </div>
             </div>
@@ -62,7 +62,7 @@
         <div class="col-sm-4 col-md-4 ">
           <div id="effect-1" class="effects clearfix">
             <div class="img"> <%= link_to image_tag("item-2.png", :alt => "user"), '/products' %>
-              <div class="overlay"> <a href="#" class="expand">+</a> 
+              <div class="overlay"> <a href="/products" class="expand">+</a> 
                <a class="close-overlay hidden">x</a>
              </div>
             </div>
@@ -72,7 +72,7 @@
         <div class="col-sm-4 col-md-4">
           <div id="effect-1" class="effects clearfix">
             <div class="img"> <%= link_to image_tag("item-3.png", :alt => "user"), 'http://watteam.com/news/press/' %>
-              <div class="overlay"> <a href="#" class="expand">+</a> 
+              <div class="overlay"> <a href="http://watteam.com/news/press/" class="expand">+</a> 
                  <a class="close-overlay hidden">x</a> 
            </div>
             </div>
