--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -88,7 +88,7 @@ $(document).ready(function(){
 
 });
 </script>
-<% if (@product.id == 33 || @product.id == 22 || spree_current_user) %>
+<% if (@product.id == 23 || @product.id == 22 ) %>
 <div class="shipping_info_2015 clearfix">
 <strong>Shipping will be available in May 2016 (Currently available in the US only)</strong>
 </div>
