--- a/app/views/spree/shared/_products.html.erb
+++ b/app/views/spree/shared/_products.html.erb
@@ -65,7 +65,7 @@ paginated_products ||= products
 <% end %>
 <% if(!spree_current_user) %>
 <div class="col-md-12">
-<p>"Accessories and replacement parts are currently only available to existing customers. Please login to the site to complete checkout. If you’re an existing customer and don’t have an account please create one via the account screen https://watteam.herokuapp.com/account"</p>
+<p>"Accessories and replacement parts are currently only available to existing customers. Please login to the site to complete checkout. If you’re an existing customer and don’t have an account please create one via the account screen <a href="https://watteam.herokuapp.com/account">"https://watteam.herokuapp.com/account"</a></p>
 </div>
 <% end %>
 <% reset_cycle("classes") %>
