--- a/app/views/spree/shared/_user_form.html.erb
+++ b/app/views/spree/shared/_user_form.html.erb
@@ -1,5 +1,6 @@
+<% if false %>
 <p>
-<%= f.label :email, Spree.t(:email) %><br />
+<%= f.label :email, Spree.t(:email) %> <br />
 <%= f.email_field :email, :class => 'title' %>
 </p>
 <div id="password-credentials">
@@ -13,3 +14,7 @@
 </p>
 </div>
 <div data-hook="signup_below_password_fields"></div>
+<% end %>
+<p>
+Please place an order to get your self registered.
+</p>
