checking user's order

--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -88,6 +88,8 @@ $(document).ready(function(){
 
 });
 </script>
+<% @mycurrentuser = spree_current_user %>
+<%= @mycurrentuser.email %>
 <% if (@product.id == 23 || @product.id == 22 ) %>
 <div class="shipping_info_2015 clearfix">
 <strong>Shipping will be available in May 2016 (Currently available in the US only)</strong>
@@ -103,7 +105,8 @@ $(document).ready(function(){
 <div id="tab-1" class="tab-content current-tab">
 
 <p><img src="<%= asset_path ('mid_banner.jpg') %>" alt="watteam banner" width="100%" /></p>
-<p><strong>With POWERBEAT, you can have it all.</strong>  The self-contained kit puts an end to factory installation and calibration. It's packed with two patent-pending mechanical sensors and intelligent processing units – that when attached to the cranks deliver real (not estimated) left and right leg power metrics.  POWERBEAT is light-weight, durable and consistently accurate enough to be used by professional cyclists – yet affordable enough for unsponsored cyclists. It's also the first to come with an 80-hour rechargeable battery, and works with ANT+ head units, as well as with Bluetooth Smart enabled smartphones. <br />
+<p><strong>With POWERBEAT, you can have it all.</strong>  The self-contained kit puts an end to factory installation and calibration. It's packed with two patent-pending mechanical sensors and intelligent processing units – that when attached 
+	to the cranks deliver real (not estimated) left and right leg power metrics.  POWERBEAT is light-weight, durable and consistently accurate enough to be used by professional cyclists – yet affordable enough for unsponsored cyclists. It's also the first to come with an 80-hour rechargeable battery, and works with ANT+ head units, as well as with Bluetooth Smart enabled smartphones. <br />
 At last, a professional-grade power meter that anyone can afford!<br />
 Notes:<br />
 1)  POWERBEAT supports hollow aluminum cranks only.  Future versions will support all additional cranks, including Carbon.<br />
