--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -51,12 +51,12 @@
       <div class="slider_contain">
         <div class="col-sm-4 col-md-4">
           <div id="effect-1" class="effects clearfix">
-            <div class="img"> <%= link_to image_tag("item-1.png", :alt => "user"), '/products/powerbeat' %>
-              <div class="overlay"> <a href="/products/powerbeat" class="expand">+</a> 
+            <div class="img"> <%= link_to image_tag("item-1.png", :alt => "user"), '/products/powerbeat-pro-level-power-meter-spring-2016' %>
+              <div class="overlay"> <a href="/products/powerbeat-pro-level-power-meter-spring-2016" class="expand">+</a> 
               <a class="close-overlay hidden">x</a>  
         </div>
             </div>
-            <h2 class="text-center title-2"><a href="/products/powerbeat" style="color:#0099A8 !important">powerbeat</a></h2>
+            <h2 class="text-center title-2"><a href="/products/powerbeat-pro-level-power-meter-spring-2016" style="color:#0099A8 !important">powerbeat</a></h2>
           </div>
         </div>
         <div class="col-sm-4 col-md-4 ">
