--- a/app/views/spree/shared/_products.html.erb
+++ b/app/views/spree/shared/_products.html.erb
@@ -22,7 +22,6 @@ paginated_products ||= products
 <div id="products1" class="inline product-listing1" data-hook>
 <% products.each do |product| %>
 <% url = spree.product_path(product, :taxon_id => @taxon.try(:id)) %>
-
 <% if  (product.id == 23) || (product.id == 22) %>
 <div  class="col-md-12 test" data-hook="products_list_item1" itemscope itemtype="http://schema.org/Product">
 	<div class="main_product_title">
@@ -48,7 +47,7 @@ paginated_products ||= products
 </div>
 <% products.each do |product| %>
 <% url = spree.product_path(product, :taxon_id => @taxon.try(:id)) %>
-<% if  (product.id != 23) && (product.id != 22) && spree_current_user %>
+<% if  (product.id != 23) && (product.id != 22) && spree_current_user.orders.count > 0 %>
 
 <div  class="col-xs-12 col-sm-6 col-md-4" data-hook="products_list_item1" itemscope itemtype="http://schema.org/Product">
 
@@ -63,7 +62,7 @@ paginated_products ||= products
 <% end %>
 </div><% end %>
 <% end %>
-<% if(!spree_current_user) %>
+<% if(spree_current_user.orders.count <= 0) %>
 <div class="col-md-12">
 <p>"Accessories and replacement parts are currently only available to existing customers. Please login to the site to complete checkout. If you’re an existing customer and don’t have an account please create one via the account screen <a href="https://watteam.herokuapp.com/account">"https://watteam.herokuapp.com/account"</a></p>
 </div>
