--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -50,7 +50,7 @@ $(document).ready(function(){
       <div class="header_right">
         <div class="top-manu">
           <ul>
-            <li id=""><a href="/cart">cart (<%= current_order.nil? ? '0' : current_order.item_count %>)
+            <li id="cart_header"><a href="/cart">cart (<%= current_order.nil? ? '0' : current_order.item_count %>)
              
            </a></li>
            <!-- <li><a href="#">wishlist</a></li>-->
