--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -13,6 +13,44 @@
         <% end %>
 
         <%= select_tag "variant_id",     options_for_select(@product.variants_and_option_values(current_currency).collect{|v| ["#{variant_options(v)}  #{variant_price(v)}", v.id]}) %>
+			
+			<% index = 0 %>	
+			<% @product.variants_and_option_values.each do |type, values| %>
+			<div id="<%= dom_id(type) %>" class="variant-options index-<%= index %>">
+			<h6 class="variant-option-type">
+			<%= label_tag 'option-value-name', Spree.t(:select_a, :index => index + 1, :name => type.presentation.downcase) %>
+			<strong class='selection'></strong>
+			<%= link_to "", "#clear", :class => "icon-remove clear-button clear-index-#{index}" %>
+			</h6>
+
+			<ul class="variant-option-values" class='inline'>
+			<% values.sort_by(&:position).each do |value| %>
+			<% classes = ["option-value"] %>
+			<% unless (variants = @product.variants_for_option_value(value)).empty? %>
+			<% classes << ( variants.any? { |v| v.in_stock? } ? "in-stock" : "out-of-stock" ) if index == 0 %>
+			<% classes << 'with-image' if value.has_image? %>
+			<li><%= link_to value.has_image? ? image_tag(value.image.url, :alt => value.presentation) : content_tag(:span, value.presentation), "#", :title => value.presentation, :class => classes.join(" "), :rel => "#{type.id}-#{value.id}" %></li>
+			<% end %>
+			<% end %>
+			<li class="clear"></li>
+			</ul>
+			</div>
+			<% index += 1 %>
+			<% end %>
+
+			<%= hidden_field_tag "products[#{@product.id}]", "", :id => "variant_id", :class => "hidden" %>
+
+			<script type="text/javascript">
+    //<![CDATA[
+      var variant_options = new VariantOptions({
+        options: <%== @product.variant_options_hash.to_json -%>,
+        track_inventory_levels: <%==  !!Spree::Config[:track_inventory_levels] -%>,
+        allow_select_outofstock: <%== !!SpreeVariantOptions::VariantConfig[:allow_select_outofstock] -%>,
+        default_instock: <%== !!SpreeVariantOptions::VariantConfig[:default_instock] -%>,
+        i18n: <%== {:out_of_stock => Spree.t(:out_of_stock), :variant_options_select => Spree.t(:variant_options_select) }.to_json -%>
+      });
+    //]]>
+    </script>
 
         <% if false %>
         <ul>
@@ -315,6 +353,8 @@ $('body').on('change','#crank_model',function(e){
     $('#add-to-cart-button').attr('disabled','disabled');
     $('#add-to-cart-button').addClass('gray');
   }
+  console.log("Crank Model: " + $(this).val() + ", Crank Manufacturer: " + $('#crank_manufacturer').find('option:selected').val() + "  " );
+  console.log("Crank Manufacturer: " + $('#crank_manufacturer').find('option:selected').val() + ", Crank Model: " + $(this).val() + "  " );
 
 });
 
